[package]
name = "hass_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows_notifier = { path = "windows_notifier" }
tokio = { version = "1.32.0", features = ["full"] }



[workspace]
members = [
    "windows_notifier",
]
