[package]
name = "windows_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.23.0"

[target."cfg(target_env = \"msvc\")".dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Foundation_Collections",
  "Win32_System_SystemInformation",
  "Data_Xml_Dom",
  "UI_Notifications"
]

[target."cfg(target_env = \"gnu\")".dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Foundation_Collections",
  "Win32_System_SystemInformation",
  "Win32_System_LibraryLoader",
  "Data_Xml_Dom",
  "UI_Notifications"
]